utility-apps/keycloak/keycloak/templates/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-metrics
spec:
  clusterIP: None
  selector:
    app: keycloak
    app.kubernetes.io/component: server
  ports:
    - {name: metrics, port: 9000, targetPort: 9000}
