utility-apps/keycloak/keycloak/templates/routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-public
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - {name: public, namespace: networking, sectionName: https}
  hostnames: [keycloak-general1.api-api-api.com]
  rules:
    - matches:
        - path: {type: PathPrefix, value: /realms}
        - path: {type: PathPrefix, value: /resources}
        - path: {type: PathPrefix, value: /.well-known}
      backendRefs:
        - {name: keycloak-service, port: 8443}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-admin
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - {name: internal, namespace: networking, sectionName: https}
  hostnames: [keycloak.internal.api-api-api.com]
  rules:
    - backendRefs:
        - {name: keycloak-service, port: 8443}
